# noot

./: .gitignore  .luarc.json  2  ;  CNAME  Cargo.toml  README.md  build.rs  color-scheme.md  colors.html  flake.nix  package-lock.json  package.json  rustfmt.toml  sample.html  sample.json  sample_config.toml  shell.nix  todo.md
.cargo/: config.toml
.github/workflows/: docs.yml
database/: program.seed.sql  program.sql  workspace.sql
db/: seed.sql
example-plugin/: manifest.yaml
locales/: de-DE.toml  en.toml  fr-FR.toml
src/: app.html  app.rs  build_meta.rs  cli.rs  consts.rs  hotkey.rs  main.rs  tray.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  rpc.rs  utils.rs  workspace.rs
src-tauri/src/filesystem/: mod.rs  watcher.rs
src-tauri/src/filesystem/utils/: filetree.rs
src-tauri/src/types/config/: mod.rs
src-tauri/src/types/state/: mod.rs  workspace_state.rs
src/assets/: mod.rs
src/components/: SideBar.svelte  TitleBar.svelte  mod.rs
src/components/form/: mod.rs  text_input.rs
src/components/md/: mod.rs
src/components/sidebar/filetree/: File.svelte  Folder.svelte  Symlink.svelte
src/components/table/: mod.rs  row.rs
src/components/tree/: mod.rs
src/components/widgets/: WidgetContainer.svelte  clock.svelte  manifest.ts  renderer.ts
src/config/: appearance.rs  mod.rs  performance.rs
src/events/: mod.rs  types.rs
src/events/handlers/: config.rs  mod.rs  rpc.rs  workspace.rs
src/events/handlers/thread_pool/: mod.rs
src/filesystem/: mod.rs
src/filesystem/config/: mod.rs  performance.rs
src/filesystem/utils/: mod.rs  traits.rs  tree.rs
src/filesystem/workspace/: global.rs  manager.rs  mod.rs  state.rs
src/filesystem/workspace/global/: flags.rs
src/filesystem/workspace/global/backups/: git.rs  mod.rs
src/filesystem/workspace/state/: minified.rs  mod.rs  plugins.rs
src/ipc/: mod.rs
src/lib/: console.ts  state.svelte.ts  tray-app.ts
src/markdown/: mod.rs
src/markdown/core/: mod.rs
src/markdown/tests/: headings.rs  mod.rs  text_styles.rs
src/plugins/: manifest.rs  mod.rs  scopes.rs
src/plugins/runtime/: mod.rs
src/routes/: +layout.svelte  +page.svelte
src/runtime/: messaging.rs  mod.rs  state.rs  workers.rs
src/runtime/windows/: mod.rs  splash.rs
src/runtime/windows/editor/: buffer.rs  messaging.rs  mod.rs  settings.rs
src/runtime/windows/settings/: mod.rs
src/runtime/windows/workspace/: mod.rs
src/runtime/workers/jobs/: build_tree.rs  cache_assets.rs  mod.rs  pre_render.rs
src/security/: mod.rs
src/storage/: mod.rs  process.rs  workspace.rs
src/storage/process/: mod.rs
src/storage/process/structs/: mod.rs  setting.rs  workspace.rs
src/storage/workspace/: buffer.rs  mod.rs
src/subsystems/: events.rs  mod.rs
src/subsystems/crypto/: mod.rs
src/subsystems/cryptography/: keychain.rs  keys.rs  mod.rs  storage.rs  traits.rs
src/subsystems/cryptography/hash/: mod.rs
src/subsystems/discord/: config.rs  mod.rs
src/subsystems/resolver/: mod.rs
src/ui/theme/: mod.rs
src/utils/: mod.rs  time.rs
src/utils/components/: icons.rs  mod.rs
src/utils/components/buttons/: mod.rs
src/utils/components/widgets/: mod.rs  rich_text.rs
src/utils/components/widgets/editor/: mod.rs
src/utils/components/widgets/status_bar/: clock.rs  mod.rs
src/utils/cryptography/: hashing.rs
src/views/: editor.rs  mod.rs  settings.rs
src/views/landing/: mod.rs
src/views/landing/new_workspace/: mod.rs
src/windows/: build_info_window.rs  mod.rs
src/windows/editor_window/: editor_panel.rs  mod.rs
static/experiences/: landing.md  test.md
static/icons/: noot.icns
themes/compiled/: dark.css  light.css
themes/noot/: main.lua  mainfest.yaml
themes/noot/css/: molten-core.css
