[package]
name = "noot"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.13.1", features = ["multi-window", "debug", "image", "tokio"]}
serde = { version = "1", features = ["derive"]}
serde_derive = "1"
dirs = "6.0.0"
lazy_static = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
toml = "0.8.20"
nanoid = "0.4"
log = "0.4.26"
pretty_env_logger = "0.5.0"
git-version = "0.3.9"
hashbrown = { version = "0.15.2", features = ["serde"] }
infer = "0.19"
keyring = "4.0.0-rc.1"
git2 = "0.20"
num_cpus = "1.16"
aead = "0.5.2"
crypto = { package = "chacha20poly1305", version = "^0.10.1", default-features = false, features = ["rand_core"] }
pulldown-cmark = "0.13.0"
highlight-pulldown = "0.2.2"
native-dialog = "0.7.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
sys-locale = "0.3.2"
iced_gif = "0.13.0"
material-icons = "0.2.0"
bincode = { version = "2.0.1", features = ["serde"] }
interprocess = "2.2.3"
tokio = { version = "1.44.1", features = ["full"] }
rdev = "0.5.3"
stringcase = "0.4.0"
regex = "1.11.1"
rust-i18n = "3.1.3"
notify = "8.0.0"
notify-rust = { version = "4.11.6", features = ["env_logger"] }
clap = { version = "4.5.35", features = ["color", "derive", "env", "wrap_help"] }
tabled = "0.18.0"
sha2 = "0.10.8"

[dev-dependencies]
ctor = "0.4.0"

[features]
default = ["i18n"]
ipc = []
rich-presence = []
i18n = []
enterprise = ["i18n"]
