
[package]
name = "noot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "noot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-notification = "2"
# tauri-plugin-clipboard = "2.1.11"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tauri-plugin-websocket = "2"
discord-rich-presence = "0.2.5"
dirs = "6.0.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
toml = "0.8.20"
nanoid = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-window-state = "2"
